--- a/WPFNavigationFrame/MainWindow.xaml
+++ b/WPFNavigationFrame/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<!--Source ist der Verweis für die Mainseite auf den Aufba-->
+﻿<!--Source ist der Verweis für die Mainseite auf den Aufbau-->
 <NavigationWindow x:Class="WPFNavigationFrame.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
